# vulkan-mini-engine

./: .gitignore  .gitmodules  README.md
assets/: simple_cube.mtl  taza.mtl
cpp/: README.md
include/: ClearBackgroundDrawDelegate.hpp  ColorTriangleDelegate.hpp  ComputeShaderBackgroundDelegate.hpp  ComputeShaderBackgroundDrawDelegate.hpp  GeometryDelegate.hpp  MeshBuffersDelegate.hpp  PushConstantsComputeShaderDelegate.hpp  RenderToCubemap.hpp  RenderToTexture.hpp  SimpleTriangle.hpp  SkySphereDelegate.hpp  TestModelDelegate.hpp  TexturesTestDelegate.hpp  VertexBuffersDelegate.hpp
mini-engine/: Cargo.toml
mini-engine-cpp/: .gitignore
mini-engine/src/: main.rs
mini-engine/src/app/: mod.rs
mini-engine/src/shaders/: color.frag.glsl  color.vert.glsl  deferred-mix.frag.glsl  gbuffer.frag.glsl  gbuffer.vert.glsl  simple_mix.frag.glsl  simple_mix.vert.glsl
mini-engine/src/vulkan/: device.rs  framebuffer.rs  mod.rs  model.rs  render_system.rs  scene.rs  shaders.rs
shaders/: build_shaders_macos.sh  build_shaders_windows.bat  colored_mesh.vert.glsl  colored_triangle.vert.glsl  cubemap_consumer_test.frag.glsl  cubemap_consumer_test.vert.glsl  cubemap_renderer.vert.glsl  cubemap_test.frag.glsl  cubemap_tint_color.frag.glsl  sky_cube.frag.glsl  sky_cube.vert.glsl  skybox.frag.glsl  skybox.vert.glsl  specular_reflection_skybox.frag.glsl  test_script.bat  test_script.sh  textures_test.frag.glsl  textures_test.vert.glsl  vertex_buffer_mesh.vert.glsl
src/: ClearBackgroundDrawDelegate.cpp  ColorTriangleDelegate.cpp  ComputeShaderBackgroundDelegate.cpp  SimpleTriangle.cpp  (+11 more)
(+125 files in other folders)
